<resources>
    <string name="app_name">居友家</string>
    <string name="home_tab">首页</string>
    <string name="my_tab">我的</string>
    <string name="app_loading">加载中...</string>
    <string name="tv1">+200积分</string>
    <string name="tv2">注册</string>
    <string name="tv3">积分历史</string>
    <string name="tv4">消费历史</string>
    <string name="tv5">测试</string>
    <string name="tv6">自动登录</string>
    <string name="tv7">忘记密码?</string>
    <string name="tv8">请输入邀请码(可选填)</string>
    <string name="tv9">请输入密码</string>
    <string name="tv10">欢迎使用</string>
    <string name="tv11">我的地址</string>
    <string name="tv12">实名认证</string>
    <string name="tv13">工种认证</string>
    <string name="tv14">我的月薪</string>
    <string name="tv15">退出登录</string>
    <string name="tv16">2019-10-12 10:20:20</string>
    <string name="tv17">用手机号注册</string>
    <string name="tv18">请输入手机号(新号码自动注册)</string>
    <string name="tv19">输入验证码</string>
    <string name="tv20">请设置密码</string>
    <string name="tv21">找回密码</string>
    <string name="tv22">获取验证码</string>
    <string name="tv23">请输入新密码</string>
    <string name="tv24">立即找回</string>
    <string name="tv25">新版本升级</string>
    <string name="tv26">取消</string>
    <string name="tv27">确认</string>
    <string name="tv28">Android7.0以上安装应用需要打开未\n知来源权限，请去设置中开启权限</string>
    <string name="tv29">登录</string>
    <string name="tv30">返回</string>
    <string name="tv31">历史记录</string>
    <string name="tv32">0</string>
    <string name="tv33">精选优质五花肉</string>
    <string name="tv34">13-14时</string>
    <string name="tv35">菜篮</string>
    <string name="tv36">优鲜推荐</string>
    <string name="tv37">限量秒杀</string>
    <string name="tv38">已抢200件</string>
    <string name="tv39">为您推荐</string>
    <string name="tv40">没有找到该商品哦~</string>
    <string name="tv41">猜你喜欢</string>
    <string name="tv42">联系方式</string>
    <string name="tv43">您可拨打联系电话联系客服，也可复制微信号进入微信搜索添加。即可与客服在线沟通</string>
    <string name="tv44">拨打客服电话</string>
    <string name="tv45">复制微信号</string>
    <string name="tv46">商品</string>
    <string name="tv47">添加新地址</string>
    <string name="tv48">身份证信息</string>
    <string name="tv49">上传成功，等待审核</string>
    <string name="tv50">确认并提交</string>
    <string name="tv51">更多</string>
    <string name="tv52">请输入身份证号</string>
    <string name="tv53">上传身份证信息</string>
    <string name="tv54">保存</string>
    <string name="tv55">昵称</string>
    <string name="tv56">性别</string>
    <string name="tv57">来自</string>
    <string name="tv58">工地</string>
    <string name="tv59">生日</string>
    <string name="tv60">工种</string>
    <string name="tv61">一</string>
    <string name="tv62">二</string>
    <string name="tv63">三</string>
    <string name="tv64">四</string>
    <string name="tv65">五</string>
    <string name="tv66">六</string>
    <string name="tv67">未设置</string>
    <string name="tv68">请输入您的月薪</string>
    <string name="tv69">￥</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="tv70">请选择你的工种</string>
    <string name="tv71">申请认证</string>
    <string name="tv72">去认证</string>
    <string name="tv73">上传认证人身份证正面</string>
    <string name="tv74">上传认证人身份证反面</string>
    <string name="tv75">参与</string>
    <string name="tv76">新手指示</string>
    <string name="tv77">不同颜色代表的每天的签到次数</string>
    <string name="tv78">一次</string>
    <string name="tv79">二次</string>
    <string name="tv80">三次</string>
    <string name="tv81">满勤</string>
    <string name="tv82">我知道了</string>
    <string name="tv83">微信</string>
    <string name="tv84">朋友圈</string>
    <string name="tv85">QQ</string>
    <string name="tv86">微博</string>
    <string name="tv87">分享，积分+10</string>
    <string name="tv88">支付金额</string>
    <string name="tv89">请输入支付积分</string>
    <string name="tv90">立即支付</string>
    <string name="tv91">选择支付方式</string>
    <string name="tv92">微信支付</string>
    <string name="tv93">支付宝支付</string>
    <string name="tv94">等待中…</string>
    <string name="tv95">居有家余额</string>
    <string name="tv96">红包福袋 砸中您啦</string>
    <string name="tv97">点我开启</string>
    <string name="tv98">今日签到</string>
    <string name="tv99">扫一扫</string>
    <string name="tv100">线上超市</string>
    <string name="tv101">订餐次日达</string>
    <string name="tv102">幸运大抽奖</string>
    <string name="tv103">¥0.00</string>
    <string name="tv104">请选择配送时间</string>
    <string name="tv105">我的订单</string>
    <string name="tv106">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名  :</string>
    <string name="tv107">您的菜篮还没有商品哦~</string>
    <string name="tv108">去逛逛</string>
    <string name="tv109">报名节目  :</string>
    <string name="tv110">立即报名</string>
    <string name="tv111">活动地点</string>
    <string name="tv112">居有家驿站</string>
    <string name="tv113">节目内容</string>
    <string name="tv114">删除</string>
    <string name="tv115">活动流程</string>
    <string name="tv116">1.活动报名截止日期：2019年6月21日\n2.报名方式:在本页面填写报名人信息以及报名节目内容\n3.报名结束以后在居有家驿站开始节目初选活动，时间2019年6月24日至7月12日，初选过程中居有家APP全程直播\n4.初选过程同步开启投票环节，全体工友均可为你喜欢的选手、节目加油“打call”，助力节目获选。\n5.晚会节目，优先从人气节目中选取。\n6.同时，居有家驿站象棋、台球开启“棋王”“球王”争霸赛，在驿站得到胜出的选手可为喜爱的选手、节目增加高额人气值。在晚会活动结束后，将开启全区“棋王”“球王”争霸赛，赢取高额奖金和“棋王”“球王”特殊纪念奖品！</string>
    <string name="tv117">评选方式</string>
    <string name="tv118">请在5分钟内完成付款，否则订单会自动取消</string>
    <string name="tv119">重新支付</string>
    <string name="tv120">查看订单</string>
    <string name="tv121">直播</string>
    <string name="tv122">点播</string>
    <string name="tv123">错误:</string>
    <string name="tv124">加载中...</string>
    <string name="tv125">验证码已发送至  178    1674    1234</string>
    <string name="tv126">登录/注册</string>
    <string name="tv127">点击我</string>
    <string name="tv128">编辑资料</string>
    <string name="tv129">0571-87323709</string>
    <string name="tv130">拨打客服热线</string>
    <string name="tv131">温馨提示:客服工作时间为工作日9:00-18:00\n
非工作时间请拨打工作人员联系电话
                        </string>
    <string name="tv132">扫一扫</string>
    <string name="tv133">每日签到</string>
    <string name="tv134">居友家是针对社区居民推出的便民服务APP。为更好地改善社区内居民买菜的体验，居友家上线了网上菜场，源头直供、价格合理，最关键的是保证新鲜。\n\n网上菜场有三大承诺：\n\n第一，单品定价绝不高于农贸市场平均价。\n\n第二，蔬菜基地直供，次日凌晨送达社区（依约定时间再配送到户），没有流转商，全程冷链配送保证新鲜，若发现烂菜叶或变质产品，客服将部分或全额退款。\n\n第三，约定配送时间内，准时送达。\n</string>
    <string name="tv135">清除缓存</string>
    <string name="tv136">抢购价</string>
    <string name="tv137">您的专属邀请码</string>
    <string name="tv138">这是您的专属邀请码，发送给好友，好友下载APP注册绑定您的邀请码，您可获得丰厚奖励</string>
    <string name="tv139">发送下载链接给好友</string>
    <string name="tv140">
【邀请规则】\n
(1)下载链接只支持微信好友转发\n
(2)也可以在应用商店下载，目前支持的OPPO、华为、小米...\n
(3)每一个邀请码，可以有无限次数的邀请\n
   注：受邀人需为在浙江范围内工作的工友，否则积分无法发放。</string>
    <string name="tv141">总积分</string>
    <string name="tv142">今日获得积分</string>
    <string name="tv143">
                            签到说明：（1）橙色实心标记说明该天已完成签到（2）补字空心标记说明当天未签到（3）该月签满一个自然月可获得全勤奖励500积分（4）补签一次需耗费5积分
                        </string>
    <string name="tv144">抢购</string>
    <string name="tv145">我的积分</string>
    <string name="tv146">立即兑换</string>
    <string name="tv147">确认兑换</string>
    <string name="tv148">头像</string>
    <string name="tv149">加入心愿单</string>
    <string name="tv150">立即购买</string>
    <string name="tv151">选择</string>
    <string name="tv152">加入购物车</string>
    <string name="tv153">请输入手机号，方便工作人员联系您！</string>
    <string name="tv154">请填写必要信息,以便于完成兑换！</string>
    <string name="tv155">充话费</string>
    <string name="tv156">请输入手机号码</string>
    <string name="tv157">确认充值</string>
    <string name="tv158">未注册手机号验证后自动创建账户</string>
    <string name="tv159">通知</string>
    <string name="tv160">选择您的小区</string>
    <string name="tv161">工龄</string>
    <string name="tv162">下一步</string>
    <string name="tv163">性别&#8195;&#8195;</string>
    <string name="tv164">原籍&#8195;&#8195;</string>
    <string name="tv165">请选择</string>
    <string name="tv166">班组&#8195;</string>
    <string name="tv167">手机号</string>
    <string name="tv168">工地&#8195;</string>
    <string name="tv169">工种&#8195;</string>
    <string name="tv170">请填写其他信息</string>
    <string name="tv171">真实姓名</string>
    <string name="tv172">工地&#8195;&#8195;</string>
    <string name="tv173">工种&#8195;&#8195;</string>
    <string name="tv174">班组&#8195;&#8195;</string>
    <string name="tv175">手机号&#8195;</string>
    <string name="tv176">余额（元）</string>
    <string name="tv178">0.00</string>
    <string name="tv179">查看明细></string>
    <string name="tv180">充值</string>
    <string name="tv181">提现</string>
    <string name="tv1651">充值金额</string>
    <string name="tv1661">单天最多可充值￥2000</string>
    <string name="tv1671">微信充值</string>
    <string name="tv1681">支付宝充值</string>
    <string name="tv1691">支付宝账户</string>
    <string name="tv1701">支付宝姓名</string>
    <string name="tv1711">验证手机号</string>
    <string name="tv1721">发送验证码</string>
    <string name="tv1761">检查更新</string>
    <string name="tv_scar1">商品小计</string>
    <string name="tv_scar2">优惠券</string>
    <string name="tv_scar3">运费</string>
    <string name="tv_scar4">*每天日订单截止时间为晚上20:00</string>
    <string name="tv_scar5">配送时间</string>
    <string name="tv_scar6">备注</string>
    <string name="tv_dz1">详细地址</string>
    <string name="tv_dz2">小区&#8195;&#8195;</string>
    <string name="tv_dz3">地址&#8195;&#8195;</string>
    <string name="tv_dz4">手机号&#8195;</string>
    <string name="tv_dz5">收货人&#8195;</string>
    <string name="tv_ui1">我的邀请收益</string>
    <string name="tv_ui2">累计获得(元)</string>
    <string name="tv_ui3">邀请人数(人)</string>
    <string name="tv_ui4">我的邀请好友</string>
    <string name="tv_sign1">签到规则</string>
    <string name="tv_sign2">每日签到都可领取菜金</string>
    <string name="tv_sign3">赚菜金</string>
</resources>

