<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context=".module.ui.account.RegisterActivity">
    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_statue_height"
        android:background="@color/color2" />
    <TextView
        android:id="@+id/tv_close"
        android:layout_below="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/tv26"
        android:textColor="@color/color6"
        android:textSize="@dimen/text_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/tv17"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="30dip"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="15dip"
            android:paddingBottom="15dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.idougong.jyj.widget.ClearEditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/tv18"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:textColorHint="@color/textProfileGray"
                    android:textSize="@dimen/text_16sp" />

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv22"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/color_register_sms"
                    android:textSize="@dimen/text_14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_marginTop="15dip"
                android:background="@color/gray_slight"></View>

            <com.idougong.jyj.widget.ClearEditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/tv19"
                android:imeOptions="actionDone"
                android:lines="1"
                android:layout_marginTop="15dip"
                android:textColor="@color/black"
                android:textColorHint="@color/textProfileGray"
                android:textSize="@dimen/text_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_marginTop="15dip"
                android:background="@color/gray_slight"></View>

            <com.idougong.jyj.widget.ClearEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/tv20"
                android:imeOptions="actionDone"
                android:lines="1"
                android:layout_marginTop="15dip"
                android:password="true"
                android:textColor="@color/black"
                android:textColorHint="@color/textProfileGray"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="30dip"
            android:background="@drawable/selector_login"
            android:gravity="center"
            android:text="@string/tv2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp" />
    </LinearLayout>
</RelativeLayout>