<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".module.ui.users.UserWalletActivity">
    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_statue_height"
        android:background="@color/white" />
    <include layout="@layout/layout_toolbar" />
    <ViewStub
        android:id="@+id/vs_showerror"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/layout_empty"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginEnd="15dip"
        android:background="@drawable/wallet_function1_background">

        <TextView
            android:id="@+id/tv_uw_balance_bs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv176"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="23dip"/>
        <TextView
            android:id="@+id/tv_uw_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_uw_balance_bs"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="13dip"
            android:textSize="@dimen/text_30sp"
            android:text="@string/tv178"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_user_wallet_rtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dip"
            android:layout_marginRight="25dip"
            android:text="@string/tv179"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_wallet_money_zq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/wallet_zq"
        android:textColor="#28B6FF"
        android:textSize="@dimen/text_12sp"
        android:drawablePadding="5dip"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="如何赚取菜金?"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginEnd="15dip"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_recharge"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:textColor="@color/white"
            android:text="@string/tv180"
            android:gravity="center"
            android:textSize="@dimen/text_14sp"
            android:background="@drawable/bg_wallet_function2"/>
        <TextView
            android:id="@+id/tv_withdrawal"
            android:layout_below="@+id/tv_recharge"
            android:layout_width="200dip"
            android:layout_height="45dip"
            android:layout_marginTop="18dip"
            android:textColor="@color/color66"
            android:text="@string/tv181"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="@dimen/text_14sp"
            android:background="@drawable/bg_wallet_function3"/>
    </RelativeLayout>
</LinearLayout>