<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_aggregate_score_ts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv141"
            android:textSize="@dimen/text_14sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color40"/>
        <TextView
            android:layout_below="@+id/tv_aggregate_score_ts"
            android:id="@+id/tv_aggregate_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv32"
            android:textSize="@dimen/text_30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_day_score_ts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv142"
            android:textSize="@dimen/text_14sp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color40"/>
        <TextView
            android:id="@+id/tv_day_score"
            android:layout_below="@+id/tv_day_score_ts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv32"
            android:textSize="@dimen/text_30sp"
            android:layout_marginTop="15dip"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>