<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:paddingRight="30dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/tv147"
            android:layout_marginTop="25dip"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_18sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:background="@null"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/text_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/color40"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60.0dip">

            <TextView
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/tv26"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14sp"
                 />
            <View
                android:layout_width="0.1dip"
                android:layout_height="match_parent"
                android:background="@color/color40"></View>
            <TextView
                android:id="@+id/btn_dialog_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/tv27"
                android:textColor="@color/color50"
                android:textSize="@dimen/text_14sp"
                 />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>